fix content jump upon page loading (JS)

--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,9 @@ width:100%;
 .intro-scrolled {
   padding-top: 180px;
 }
+.intro-load {
+  padding-top: 43px;
+}
 .my-section{
   width: 100%;
 }
